# Asuka-chan2.0

./: .breakpoints  Big PP.txt  CALM.txt  Japanese.txt  ZOZ.txt  application.yml  get_from_servers.py  keep_alive.py  main.py  mostafa.txt  pyproject.toml  replit.nix
.cache/replit/: __replit_disk_meta.json
cogs/: Connect4.py  Connect4Slash.py  Music.py  RPGCommands.py  RockPaperScissors.py  ServerStatus.py  SpeedTyping.py  animecrawler.py  animecrawler2.py  animecrawler_copy.py  chatgpt.py  customHelp.py  dndroll.py  gamecrawler.py  gifInteractions.py  hiSlashBack.py  interactions.py  interactionsSlash.py  keep_alive.py  levelsystem.py  magic8pool.py  mangacrawler.py  mastercommands.py  music.py  playHangman.py  queue_storage.py  serverconfig.py  serverevents.py  slashcommands.py  tempmusic.py  test.py  tictactoe.py  tmusicv2.py  ytubeconverter.py
db/: gifs (copy).asdb  gifs.asdb  servers.json  users.json
db/chatgpt/conversations/: asuka.json  elysia.json  hutao.json
db/gifs/: hug.json  punch.json  slap.json
db/hangman/: words.json
db/rpg/controller/: attacksJsonController.py  backup_1.py  classesJsonController.py  messagesJsonController.py  monsterJsonController.py  playerJsonController.py  statusesJsonController.py  stausesJsonController.py
db/rpg/db/: attacks (copy).json  attacks.json  classes.json  messages.json  monsters (copy).json  monsters.json  players (copy).json  players.json  statuses.json
db/rpg/functionalities/: calculations.py  combat.py  interactiveMessages.py
gifs/: hug.txt  punch.txt  slap.txt
help materials/: gif txt to json.py
