[tool.poetry]
name = "asuka-chan20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
Flask = "^2.0.0"
lavalink = "^3.1.4"
bs4 = "^0.0.1"
discord-components = "^2.1.2"
discord-components-paginator = "^1.0.1"
ffmpeg = "^1.4"
PyNaCl = "^1.5.0"
pytube = "^11.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
