[tool.poetry]
name = "asuka-chan20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
bs4 = "^0.0.1"
ffmpeg = "^1.4"
PyNaCl = "^1.5.0"
nextcord = "^2.0.0-alpha.6"
pytube = "^12.0.0"
utils = "^1.0.1"
youtube_dl = "^2021.12.17"
discord = "^2.1.0"
requests = "^2.28.2"
yt-dlp = "^2023.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
